# autopsy

./: DELIVERABLES.txt  ENHANCEMENTS_APPLIED.md  ENHANCEMENT_SUMMARY.md  FEATURE_MATRIX.md  PRACTICAL_EXAMPLES.md  README.md  demo_fragments.json  demo_scan.json  demo_workflow.sh  fixed_fragments.json  test_fragments.json
autopsy_pro_v3/: .gitignore  CHANGELOG.md  COMPARISON.md  LICENSE  QUICKSTART.md  README.md  __init__.py  cli.py  config.py  extractor.py  models.py  pyproject.toml  requirements.txt  scanner.py  setup.py  utils.py
autopsy_pro_v3/tests/: __init__.py  test_extractor.py
