[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopsy-pro"
version = "3.0.0"
description = "Extract and rebuild code from inactive projects"
readme = "README.md"
authors = [
    {name = "Autopsy Pro Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
frameworks = [
    "django>=4.2.0",
    "flask>=2.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
cli = [
    "rich>=13.0.0",
    "click>=8.1.0",
]
performance = [
    "orjson>=3.9.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]
all = [
    "django>=4.2.0",
    "flask>=2.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "orjson>=3.9.0",
]

[project.scripts]
autopsy-pro = "autopsy_pro_v3.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/autopsy-pro"

[tool.setuptools]
packages = ["autopsy_pro_v3"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
